1.9 Next
---------------

1.8 30-Nov-2014
---------------
#8 Change absolute URI in xhtml1 schemas to relative URI, in order to avoid re-downloading xml.xsd each time.
#11 Make plugin threadsafe for maven 3.x parallel execution
#12 Support for property substitution (i.e. property = ${anotherProperty}) in property values.

1.7 15-Nov-2013
---------------
#1 Support for String.format parameters (C-stytle formatting)
#4 Support for multi-line property value with parameters and quotes
#5 Support for multiple resource bundles per project
#7 Support for detecting duplicated keys in property file

1.6 07-Jan-2013
---------------
Added French translation for the plugin
Fixed a bug with a simple quote following a double quote in the HTML validation
Addition of the acceptance of LI elements at the root of an HTML resource (without a UL or OL encompassing element)

1.5 23-Sep-2012
---------------
Added generation of CSV files with keys for each severity (ERROR/WARN/INFO).
Added a summary to the report, with links to sections
Added logging of expected html/url key pattern for default validator
Refactored ValidateMojo logic by splitting the class into 6 orchestrators
Fixed strange bug where javascript validator would not log errors into the console
Fixed HTML tag coherence validator to ignore siblings order
Upgraded xhtml5 schema to XMLmind 1.0.3

1.4 26-May-2012 New validators
---------------
Refactored validators architecture and model, with notion of scope (single property value, translations of a property, whole properties file, whole bundle of properties file, ...)
Added identical translation validator, to info identically translated resources, or warn if translations are mostly identical but a few differ.
Added Trailing whitespace validator for all resources.
Added SpellCheck validator, based on Jazzy Spellchecker and using locale from properties file name. Location of dictionaries has to be specified via plugin configuration.