@@ -1,0 +1,1 @@
+ALLP.text.key=Some text.
